--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         stage('SonarQube analysis') {
     		when { not { anyOf { branch 'dev1'; branch 'dev2' } } }
     		steps{
-	    		def scannerHome = tool 'my-sonar-runner';
+	    		def scannerHome = tool 'my-sonar-runner'
 	    		withSonarQubeEnv('my_sonarqube_server') {
 	      			sh "${scannerHome}/bin/sonar-runner.sh"
 	    		}
