--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
     			script{
 		    		def scannerHome = tool 'my-sonar-runner'
 		    		withSonarQubeEnv('my_sonarqube_server') {
-		      			sh "${scannerHome}/bin/sonar-runner.sh"
+		      			sh "${scannerHome}/bin/sonar-runner"
 		    		}
 		    	}
     		}
