--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
 			    		def scannerHome = tool 'my-sonar-runner'
 			    		
 			    		withSonarQubeEnv('my_sonarqube_server') {
-			      			sh "${scannerHome}/bin/sonar-runner -D sonar.projectKey=vladwebtest -D sonar.sources='$WORKSPACE/vladwebtest/'"
+			      			sh "${scannerHome}/bin/sonar-runner -D sonar.projectKey=vladwebtest:vladwebtest -D sonar.sources='$WORKSPACE/vladwebtest/'"
 			      			def message="http://localhost:9000/sonar/dashboard?id=vladwebtest"
 			      			notifyBuild('SUCCESS','SonarQube analysis', message)
 			    		}
