--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -107,7 +107,7 @@ pipeline {
             		try {
 	    				notifyBuild('STARTED','DEPLOY')
 	    				//download artifact
-	    				sh "echo env.CATALINA_HOME"
+	    				sh "echo "+env.CATALINA_HOME
 						def message="http://localhost:6080/vladwebtest"
 						sh "curl -o vladwebtest-0.0.1-SNAPSHOT.war http://rhel73test:5081/artifactory/libs-snapshot-local/vladwebtest-0.0.1-SNAPSHOT.war"
 						sh "'"+env.CATALINA_HOME+"/bin/shutdown.sh'"
