--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -129,9 +129,9 @@ pipeline {
             		try {
 	    				notifyBuild('STARTED','TEST')
 	    				
-	    				message=env.TOMCAT_URL+"/vladwebtest"
+	    				sh java -cp "/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59-sources.jar:/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59.jar:/opt/selenium/selenium_java-3.141.59/libs/okio-1.14.0.jar:/opt/selenium/selenium_java-3.141.59/libs/okhttp-3.11.0.jar:/opt/selenium/selenium_java-3.141.59/libs/guava-25.0-jre.jar:/opt/selenium/selenium_java-3.141.59/libs/commons-exec-1.3.jar:/opt/selenium/selenium_java-3.141.59/libs/byte-buddy-1.8.15.jar:/home/inst1/git/TestJavaPrg/TestJavaPrg/target/test-classes:/opt/jcommander/jcommander.jar:/home/inst1/.p2/pool/plugins/org.testng_6.14.2.r201802161450.jar" org.testng.TestNG -d 'var' '/home/inst1/git/TestJavaPrg/TestJavaPrg/testng.xml'"
 						
-						notifyBuild('SUCCESS','TEST', message) 	
+						notifyBuild('SUCCESS','TEST') 	
 					}
 	   			 	catch (e) {
 					    currentBuild.result = "FAILED"
@@ -151,7 +151,7 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
   def subject = step+" step ${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'"
   def summary = "${subject} (${env.BUILD_URL})"
   def details 
-
+  
   // Override default values based on build status
   if (buildStatus == 'STARTED') {
     color = 'YELLOW'
@@ -169,7 +169,7 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
     	details= """<p>DEPLOY step STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
     		<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
     }else if (step=='TEST'){
-    	details= """<p>TEST step STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
+    	details= """<p>Selenium test step STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
     		<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
     }
     
@@ -188,10 +188,10 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
     } else if (step=='DEPLOY'){
     	details= """<p>DEPLOY SUCCESSFUL: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
     		<p>You can browse report, using, using <a href='$param1'>this link</a>.</p>"""
-    } else if (step=='TEST'){
-    	details= """<p>DEPLOY SUCCESSFUL: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-    		<p>You can browse report, using, using <a href='$param1'>this link</a>.</p>"""
-    }
+    } 
+    else if (step=='TEST'){
+    	subject=
+    } 
   } else if (buildStatus == 'UNSTABLE') {
     color = 'BLUE'
     colorCode = '#FFFF00'
@@ -220,14 +220,22 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
     	details= """<p>DEPLOY FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
     		<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
     } else if (step=='TEST'){
-    	details= """<p>DEPLOY FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-    		<p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
+    	subject="Selenium: Job '${env.JOB_NAME}' Status: currentBuild.result Tests: passed"
     }
   }
 
-  emailext (
-      subject: subject,
-      body: details,
-      recipientProviders: [[$class: 'RequesterRecipientProvider']]
-    )
+  
+  if (step=='TEST'){  
+	    emailext {
+	    	mimeType: 'text/html',
+	    	subject:subject
+	        body: '${FILE,path="var/emailable-report.html"}', 
+	        recipientProviders: [[$class: 'RequesterRecipientProvider']]
+  } else {
+    	emailext (
+	      subject: subject,
+	      body: details,
+	      recipientProviders: [[$class: 'RequesterRecipientProvider']]
+	    )
+  }
 }
