--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -4,6 +4,9 @@ pipeline {
 			maven 'myMaven-3'
 			jdk 'myJDK-1.8'
 		 } 
+	environment{
+		SELENIUM_CLASSPATH=""
+	}
 	stages{
 		stage('Build Dev') {
             when { branch 'dev*' }
@@ -128,13 +131,17 @@ pipeline {
             	script {
             		try {
 	    				notifyBuild('STARTED','TEST')
-	    				
-	    				sh "java -cp '/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59-sources.jar:"+
+	    				SELENIUM_CLASSPATH="'/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59-sources.jar:"+
+	    				     "/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59.jar:/opt/selenium/selenium_java-3.141.59/libs/okio-1.14.0.jar:"+
+	    				     "/opt/selenium/selenium_java-3.141.59/libs/okhttp-3.11.0.jar:/opt/selenium/selenium_java-3.141.59/libs/guava-25.0-jre.jar:"+
+	    				     "/opt/selenium/selenium_java-3.141.59/libs/commons-exec-1.3.jar:/opt/selenium/selenium_java-3.141.59/libs/byte-buddy-1.8.15.jar:"+
+	    				     "/home/inst1/git/TestJavaPrg/TestJavaPrg/target/test-classes:/opt/jcommander/jcommander.jar:"'/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59-sources.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59.jar:/opt/selenium/selenium_java-3.141.59/libs/okio-1.14.0.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/okhttp-3.11.0.jar:/opt/selenium/selenium_java-3.141.59/libs/guava-25.0-jre.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/commons-exec-1.3.jar:/opt/selenium/selenium_java-3.141.59/libs/byte-buddy-1.8.15.jar:"+
 	    				     "/home/inst1/git/TestJavaPrg/TestJavaPrg/target/test-classes:/opt/jcommander/jcommander.jar:"+
-	    				     "/home/inst1/.p2/pool/plugins/org.testng_6.14.2.r201802161450.jar" org.testng.TestNG -d 'var' '/home/inst1/git/TestJavaPrg/TestJavaPrg/testng.xml'"
+	    				     "/home/inst1/.p2/pool/plugins/org.testng_6.14.2.r201802161450.jar" 
+	    				sh "java -cp $SELENIUM_CLASSPATH" +"org.testng.TestNG -d 'var' '/home/inst1/git/TestJavaPrg/TestJavaPrg/testng.xml'"
 						
 						notifyBuild('SUCCESS','TEST') 	
 					}
