--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -135,7 +135,7 @@ pipeline {
 	    				     "/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59.jar:/opt/selenium/selenium_java-3.141.59/libs/okio-1.14.0.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/okhttp-3.11.0.jar:/opt/selenium/selenium_java-3.141.59/libs/guava-25.0-jre.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/commons-exec-1.3.jar:/opt/selenium/selenium_java-3.141.59/libs/byte-buddy-1.8.15.jar:"+
-	    				     "/home/inst1/git/TestJavaPrg/TestJavaPrg/target/test-classes:/opt/jcommander/jcommander.jar:"'/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59-sources.jar:"+
+	    				     "/home/inst1/git/TestJavaPrg/TestJavaPrg/target/test-classes:/opt/jcommander/jcommander.jar:'/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59-sources.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/client-combined-3.141.59.jar:/opt/selenium/selenium_java-3.141.59/libs/okio-1.14.0.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/okhttp-3.11.0.jar:/opt/selenium/selenium_java-3.141.59/libs/guava-25.0-jre.jar:"+
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/commons-exec-1.3.jar:/opt/selenium/selenium_java-3.141.59/libs/byte-buddy-1.8.15.jar:"+
