--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
 		 } 
 	environment{
 		SELENIUM_CLASSPATH=""
+		SELENIUM_OUTPUT="var"
 	}
 	stages{
 		stage('Build Dev') {
@@ -40,7 +41,8 @@ pipeline {
 	    				     "/opt/selenium/selenium_java-3.141.59/libs/commons-exec-1.3.jar:/opt/selenium/selenium_java-3.141.59/libs/byte-buddy-1.8.15.jar:"+
 	    				     "/home/inst1/git/TestJavaPrg/TestJavaPrg/target/test-classes:/opt/jcommander/jcommander.jar:"+
 	    				     "/home/inst1/.p2/pool/plugins/org.testng_6.14.2.r201802161450.jar" 
-	    				sh "java -cp $SELENIUM_CLASSPATH" +"org.testng.TestNG -d 'var' '/home/inst1/git/TestJavaPrg/TestJavaPrg/testng.xml'"
+	    				     
+	    				sh "java -cp $SELENIUM_CLASSPATH org.testng.TestNG -d '$SELENIUM_OUTPUT' '/home/inst1/git/TestJavaPrg/TestJavaPrg/testng.xml'"
 						
 						notifyBuild('SUCCESS','TEST') 	
 					}
