--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -260,6 +260,7 @@ def GetRecepients(branch){
 	def receipient_list=null
 	echo "I am hear"		
 	branch=branch.toLowerCase()
+	echo "hear 2"
 	last_pos=branch.lastIndexOf(".")+1
 	trailing_str=branch
 	if (last_pos>=0)
@@ -282,6 +283,7 @@ def GetRecepients(branch){
 	}
 	else{
 		recepient_list=[[$class: 'RequesterRecipientProvider']]
+		echo "KUKU"
 	}		
 	return recepient_list
 }
