--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -166,7 +166,7 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
   def subject = step+" step ${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'"
   def summary = "${subject} (${env.BUILD_URL})"
   def details 
-  echo ${env.BRANCH_NAME}
+  echo "$BRANCH_NAME"
   // Override default values based on build status
   if (buildStatus == 'STARTED') {
     color = 'YELLOW'
