--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -260,21 +260,17 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
 
 def GetRecepients(branch){
 	def receipient_list=null
-	def last_pos
-	def trailing_str
+	int last_pos
+	String trailing_str=""
 	
 	branch=branch.toLowerCase()
-	echo branch
-	
+		
 	last_pos=branch.lastIndexOf(".")
 	
-	echo "last position"
-	echo last_pos
 	trailing_str=branch
-	echo trailing_str
+	
 	if (last_pos>=0){
 		trailing_str=lastNChars(branch,branch.length()-last_pos+1)
-		echo trailing_str
 	}
 	
 	if (trailing_str=="int"){
