--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -260,18 +260,17 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
 
 def GetRecepients(branch){
 	def receipient_list=null
-	def last_pos
+	def last_pos=-1
 	def trailing_str=branch.toLowerCase()
 	
 	echo trailing_str
-		
-	last_pos=branch.lastIndexOf(".")
-	
 	echo last_pos
-	
-	if (last_pos>=0){
+	if (trailing_str.contains(".")){
+		last_pos=branch.lastIndexOf(".")
 		trailing_str=lastNChars(branch,branch.length()-last_pos+1)
 	}
+	echo trailing_str
+	echo last_pos
 	
 	if (trailing_str=="int"){
 		receipient_list=env.RTP_FULL_RECIPIENT_LIST
