--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -270,7 +270,7 @@ def GetRecepients(branch){
 	if (trailing_str.contains(".")){
 		last_pos=trailing_str.lastIndexOf(".")+1
 		def n=trailing_str.length()-last_pos
-	    trailing_str=n > trailing_str?.size() ? null : n ? trailing_str[-n..-1] : ''
+	    trailing_str=trailing_str[-n..-1] 
 	}
 	
 	if (trailing_str=="int"){
